# rgpstk

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENCE.md  README.md  codecov.yml  test_coverage.json
.github/workflows/: workflow.yml
cmake/: coverage.cmake
lib/: geo.c  geo.h  geo_defs.h  nmea.c  nmea.h  version.c  version.h
test/: CMakeLists.txt  export_coverage.sh  test_runner_nmea_lat_long.c
test/src/: test_runner.c
test/tests/: test_geo_calc.c  test_geo_misc.c  test_nmea_checksum.c  test_nmea_gsv.c  test_nmea_invalid.c  test_nmea_lat_long.c  test_version.c  tests.h
tools/: CMakeLists.txt
tools/nmea_checksum/: CMakeLists.txt
tools/nmea_checksum/src/: main.c
tools/nmea_parser/: CMakeLists.txt
tools/nmea_parser/src/: distance_delta.c  distance_delta.h  main.c
